--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "تحدي الرجال والنساء",
   "short_name": "التحدي",
   "start_url": ".",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#ffffff",
   "theme_color": "#1877f2",
   "orientation": "portrait",
